# simple-ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: example-scene.json  sphere-packing.json  triangle.json
src/: Camera3D.cpp  Camera3D.h  Light.cpp  Light.h  Object3D.cpp  Object3D.h  Scene.cpp  Scene.h  main.cpp  utils.h
